テンプレートエンジンのインストーラーを修正

--- a/kona3admin/template/admin_user.html
+++ b/kona3admin/template/admin_user.html
@@ -30,6 +30,10 @@
 <form method='POST'>
 <input type='hidden' name='q' value='save'>
 <h1>KonaWiki3 : Setup Admin User</h1>
+<div>
+  Please set the administrator's email address and password.<br>
+  管理者のメールアドレスとパスワードを設定してください。
+</div>
 <div class="userform">
   User ID:<br>
   <input type='text' name='userid' value='admin@example.com'><br>
