--- a/kona3engine/template/attach.html
+++ b/kona3engine/template/attach.html
@@ -14,8 +14,8 @@
         <hr/>
         <h3>files:</h3>
         <div><ul>{{ $files | raw }}</ul></div>
-    </div>
-  </div>
+    </div><!-- /.box -->
+</div><!-- /#wikimessage -->
 <div style="clear:both;"></div>
 
 {{ include parts_footer.html }}
