--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -23,9 +23,6 @@
       padding: 0.5em;
       width: 20em;
     }
-    .userform {
-      padding: 1em;
-    }
 </style>
 
 <div id="wikimessage">
@@ -33,7 +30,7 @@
 
 <form method='POST' class="pure-form">
 <input type='hidden' name='q' value='save'>
-<div class="userform">
+<div>
   <h2>{{ 'Setup Konwiki' | lang }}</h2>
   <h3>Basic</h3>
   Wiki Title:<br>
