--- a/kona3engine/template/admin_user.html
+++ b/kona3engine/template/admin_user.html
@@ -9,7 +9,7 @@
       </div>
       <div class="userform pad">
         Email:<br>
-        <input type='text' name='userid' value=''><br>
+        <input type='email' name='email' value=''><br>
         Password:<br>
         <input type='password' name='pw' value=''><br>
         Password (confirm):<br>
