自動ログインの仕組み微修正 #66

--- a/kona3engine/template/login.html
+++ b/kona3engine/template/login.html
@@ -5,6 +5,7 @@
 <div id="loginform">
   <div class="error">{{ $msg }}</div>
   <form
+    id="user_login_form"
     class="pure-form pure-form-stacked" 
     method="post" action="{{$action}}">
     <input type="hidden" name="a_mode" value="trylogin">
