カウンタの問題を修正

--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -87,14 +87,17 @@
   plugin_disallow (delimiter=','):<br>
   <input type='text' name='plugin_disallow' value='{{$plugin_disallow}}'><br>
   
+  show_counter(true/false):<br>
+  <input type='text' name='show_counter' value='{{$show_counter | boolstr}}'><br>
+  
+  show_data_dir(true/false):<br>
+  <input type='text' name='show_data_dir' value='{{$show_data_dir | boolstr}}'><br>
+  
   noanchor(true/false):<br>
   <input type='text' name='noanchor' value='{{$noanchor | boolstr}}'><br>
   
   enc_pagename(true/false):<br>
   <input type='text' name='enc_pagename' value='{{$enc_pagename | boolstr}}'><br>
-  
-  show_data_dir(true/false):<br>
-  <input type='text' name='show_data_dir' value='{{$show_data_dir | boolstr}}'><br>
   
   use_pdf_out(true/false):<br>
   <input type='text' name='use_pdf_out' value='{{$use_pdf_out | boolstr}}'><br>
