ページの再読み込みが必要のバグ #95 jQueryへの依存を少なく #96

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -29,6 +29,7 @@
       <div class="desc">
         <input type="checkbox" id="autosave" class="info" style="width:2em;" name="autosave" value="yes" checked>
         <label for="autosave"> Auto save </label>
+        <span id="change-info">-</span>
       </div>
     </form>
 
