ページ編集でDiscordに通知する #81

--- a/kona3engine/resource/kona3def.css
+++ b/kona3engine/resource/kona3def.css
@@ -376,6 +376,11 @@
   padding:1.5em;
 }
 
+#wikimessage .conf
+{
+  line-height: 1.9em;
+}
+
 #wikimessage .box_border
 {
   border: 1px solid silver;
