AI機能を修正。手軽に誤字脱字の修正ができるように更新

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -103,6 +103,7 @@
         <div>
           <button id="ai_ask_btn" class="pure-button button-short">{{'Ask to AI' | lang}}</button>
           <span id="ai_loader" style="display: none;"></span>
+          <span id="ai_ask_cost" style="color: gray"></span>
         </div>
         <div id="ai_output_area">
           <div id="ai_output"></div>
