AI機能を若干強化

--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -128,8 +128,12 @@
   max_search_level:<br>
   <input type='text' name='max_search_level' value='{{$max_search_level}}'><br>
 
+  <!-- ai -->
   openai_apikey(for CharGPT)[<a href="https://kujirahand.com/konawiki3/index.php?AI" target="_new">help</a>]:<br>
   <input type='text' name='openai_apikey' value='{{$openai_apikey}}'><br>
+  openai_apikey_model (ex) ( gpt-4o-mini | gpt-4o ):<br>
+  <input type='text' name='openai_apikey_model' value='{{$openai_apikey_model}}'><br>
+  <!-- /ai -->
 
   Discord webhook URL:<br>
   <input type='text' name='discord_webhook_url' value='{{$discord_webhook_url}}'><br>
