--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -124,3 +124,20 @@ textarea#ai_input_text {
   color: black;
   border: 1px solid gray;
 }
+
+#ai_output_area {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding: 0.1em;
+  background-color: #f0f0ff;
+}
+
+#ai_output_area button {
+  margin-right: 0.3em;
+}
+#ai_output_area .ai_block {
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-top: 0.5em;
+  padding: 0.5em;
+}
