--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -133,6 +133,8 @@
   <input type='text' name='openai_apikey' value='{{$openai_apikey}}'><br>
   openai_apikey_model (ex) ( gpt-4o-mini | gpt-4o ):<br>
   <input type='text' name='openai_apikey_model' value='{{$openai_apikey_model}}'><br>
+  openai_api_basic_instruction:<br>
+  <input type='text' name='openai_api_basic_instruction' value='{{$openai_api_basic_instruction}}'><br>
   <!-- /ai -->
 
   Discord webhook URL:<br>
