--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -117,14 +117,6 @@ textarea#ai_input_text {
   line-height: 1.3em;
 }
 
-.ai_block {
-  margin: 0.3em;
-  padding: 0.3em;
-  background-color: #f0f0f0;
-  color: black;
-  border: 1px solid gray;
-}
-
 #ai_output_area {
   margin-top: 1em;
   margin-bottom: 1em;
@@ -138,6 +130,10 @@ textarea#ai_input_text {
 #ai_output_area .ai_block {
   font-size: 1em;
   line-height: 1.5em;
+  margin: 0.3em;
   margin-top: 0.5em;
   padding: 0.5em;
+  background-color: #ffffff;
+  color: black;
+  border: 1px solid gray;
 }
