--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -51,7 +51,8 @@
           <h3>Help:</h3>
           <ul>
             <li><a href="https://kujirahand.com/konawiki3/index.php?Kona3%E8%A8%98%E6%B3%95" target="_new">{{'How to write KonaWiki' | lang}}</a></li>
-            <li><a href="https://kujirahand.com/konawiki3/index.php?AI" target="_new">{{'How to enabled AI'|lang}}</a></li>
+            <li><a href="index.php?FrontPage&plugin&name=pluginlist" target="_new">{{'Plugins List' | lang}}</a></li>
+            <li><a href="https://kujirahand.com/konawiki3/index.php?AI" target="_new">{{'How to enabled AI' | lang}}</a></li>
           </ul>
           <h3>Shortcut:</h3>
           <ul>
