AI校正の文字を大きめに

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -123,8 +123,9 @@
 
 <script src="index.php?kona3_autologin.js&resource"></script>
 
+<!-- language data -->
 <div id="locale_list" style="display: none;">
-  <p id="locale__replace">{{'Replace' | lang}}</p>
+  <p id="locale__replace">{{'Replace Text' | lang}}</p>
   <p id="locale__not_found">{{'Not found' | lang}}</p>
   <p id="locale__find">{{'Find' | lang}}</p>
   <p id="locale__copy">{{'Copy' | lang}}</p>
