--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -128,12 +128,22 @@ textarea#ai_input_text {
   margin-right: 0.3em;
 }
 #ai_output_area .ai_block {
-  font-size: 1em;
-  line-height: 1.5em;
+  font-size: 1.1em;
+  line-height: 1.8em;
   margin: 0.3em;
   margin-top: 0.5em;
   padding: 0.5em;
   background-color: #ffffff;
   color: black;
   border: 1px solid gray;
+}
+
+#ai_loader {
+  font-size: 1.0em;
+}
+
+#aiReplaceButtons {
+  text-align: right;
+  padding-top: 1em;
+  border-top: 1px dotted silver;
 }
