メッセージのローカライズを追加

--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -140,6 +140,7 @@
       <br>
       <input type='hidden' name='edit_token' value='{{$edit_token}}'>
       <input type='submit' value='Save'>
+      <span style="font-size:0.8em; color:silver;">({{$edit_token}})</span>
     </div>
     </form>
   </div>
