fixed init wiki conf

--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -42,7 +42,7 @@
       <h2>{{ 'Setup Konwiki' | lang }}</h2>
       <div class="box" style="background-color: #f0f0ff; border: 1px dotted gray; padding: 1.0em;">
         {{ 'Please review the settings.' | lang }}<br>
-        <input type='submit' value='Save'>
+        <input type='button' value='Save' onclick='document.forms[0].submit();'>
       </div>
       <h3>Basic</h3>
       Wiki Title:<br>
