--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -122,6 +122,10 @@
       Discord webhook URL:<br>
       <input type='text' name='discord_webhook_url' value='{{$discord_webhook_url}}'><br>
 
+      <h3>Mermaid CLI</h3>
+      <a href="https://github.com/mermaid-js/mermaid-cli">Mermaid-cli</a> path(ex: mmdc):<br>
+      <input type='text' name='mermaid_cli' value='{{$mermaid_cli}}'><br>
+
       <h3>Git</h3>
       git_enabled(true/false):<br>
       <input type='text' name='git_enabled' value='{{$git_enabled | boolstr}}'><br>
