fixed mermaid plugins

--- a/kona3engine/template/admin_conf.html
+++ b/kona3engine/template/admin_conf.html
@@ -123,7 +123,7 @@
       <input type='text' name='discord_webhook_url' value='{{$discord_webhook_url}}'><br>
 
       <h3>Mermaid CLI</h3>
-      <a href="https://github.com/mermaid-js/mermaid-cli">Mermaid-cli</a> path(ex: mmdc):<br>
+      <a href="https://github.com/mermaid-js/mermaid-cli">Mermaid-cli</a> path([ex] npx mmdc):<br>
       <input type='text' name='mermaid_cli' value='{{$mermaid_cli}}'><br>
 
       <h3>Git</h3>
