--- a/kona3engine/resource/kona3def.css
+++ b/kona3engine/resource/kona3def.css
@@ -180,15 +180,16 @@
 
 #kona3_main .resmark
 {
-  background-color:#f0f0ff;
-  color:#00f;
-  margin:4px 4px 12px 2em;
+  margin:4px 4px 12px 0.8em;
   padding:8px 4px 4px 0.5em;
 }
 
 #kona3_main .resmark p {
+  border-left: 4px solid #cacadd;
   border-bottom: 1px dotted silver;
-  margin: 0.5em;
+  background-color: rgba(250, 250, 255, 0.6);
+  margin: 0.3em, 0.3em, 0.3em, 0.8em;
+  padding: 0.5em 0.8em 0.7em 0.9em;
 }
 
 #kona3_main .todo
