add print button

--- a/kona3engine/template/print.html
+++ b/kona3engine/template/print.html
@@ -22,5 +22,10 @@
 <br>
 <br>
 <br>
+<script>
+  if (window.print) {
+    window.print(); // Trigger the print dialog
+  }
+</script>
 </body>
 </html>
