--- a/kona3engine/template/login.html
+++ b/kona3engine/template/login.html
@@ -10,8 +10,8 @@
     method="post" action="{{ $action }}">
     <input type="hidden" name="a_mode" value="trylogin">
     <input type="hidden" name="edit_token" value="{{ $edit_token }}">
-    <label for="user">{{'User' | lang}}:
-      <input id="user" type="text" name="a_user">
+    <label for="email">{{'Email' | lang}}:
+      <input id="email" type="text" name="a_email">
     </label>
     <label for="pass">{{'Password' | lang}}:
       <input id="pass" type="password" name="a_pw">
