--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -38,6 +38,7 @@
         <button onclick="replaceOnClick()">{{'Replace' | lang}}</button>
         <button onclick="tagsOnClick()">{{'Tags' | lang}}</button>
         <button onclick="historyOnClick()">{{'History' | lang}}</button>
+        <button onclick="miscOnClick()">{{'Misc' | lang}}</button>
         {{ if $ai_enabled }}
         <span id="ai_buttons">
           <button onclick="aiOnClick()">{{'AI Assitant' | lang}}</button>
@@ -98,6 +99,11 @@
           {{ endfor }}
         </ul>
       </div><!-- end of #history_div -->
+      <div id="misc_div" class="desc" class="block2" style="display: none;">
+        <div>
+          <button onclick="convertToMarkdownClick()">Convert KonaWikiNotation to Markdown</button>
+        </div>
+      </div>
       {{ if $ai_enabled }}
       <div id="ai_div" class="block2" style="display: none;">
         <div>
@@ -122,8 +128,6 @@
 </div>
 <div style="clear:both;"></div>
 
-<script src="index.php?kona3_autologin.js&resource"></script>
-
 <!-- language data -->
 <div id="locale_list" style="display: none;">
   <p id="locale__replace">{{'Replace Text' | lang}}</p>
@@ -132,5 +136,9 @@
   <p id="locale__copy">{{'Copy' | lang}}</p>
   <p id="locale__cancel">{{'Cancel' | lang}}</p>
 </div>
+
+<script src="index.php?kona3_autologin.js&resource"></script>
+<script src="index.php?edit_wiki.js&resource"></script>
+
 
 {{ include parts_footer.html }}
