--- a/kona3engine/resource/kona3def.css
+++ b/kona3engine/resource/kona3def.css
@@ -181,7 +181,9 @@
 #kona3_main .resmark
 {
   margin:4px 4px 12px 0.8em;
-  padding:8px 4px 4px 0.5em;
+  padding:10px 4px 4px 0.5em;
+  border-left: 4px rgba(230,230,230, 0.6) solid;
+  border-bottom: 1px rgba(230,230,230, 0.4) dotted;
 }
 
 #kona3_main .resmark p {
