--- a/kona3engine/template/login.html
+++ b/kona3engine/template/login.html
@@ -10,7 +10,7 @@
     method="post" action="{{ $action }}"
     autocomplete="on">
     <input type="hidden" name="a_mode" value="trylogin">
-    <input type="hidden" name="edit_token" value="{{ $edit_token }}" autocomplete="off">
+    <input type="hidden" name="login_token" value="{{ $login_token }}" autocomplete="off">
     <label for="email">{{'Email' | lang}}:
       <input id="email" type="text" name="a_email" autocomplete="username">
     </label>
